navbar is responsive and collapses correctly

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@
 main {
 	margin: 0 auto;
 	max-width: 100%;
-  padding: 50px 100px;
+  padding: 50px 50px;
   
  
 }
@@ -30,7 +30,9 @@ main {
 } 
 html,
 body {
-  height: 100%;
+  padding: 0;
+  margin: 0;
+  text-align: center;
 }
 
 body {
@@ -175,7 +177,7 @@ textarea {
 
 .container {
   width: 100%;
-  max-width: 1200px;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -312,11 +314,6 @@ a {
   margin-bottom: 15px;
 }
 
-.navbox {
-  display: flex;
-  justify-content: space-evenly;
-}
-
 .signupform {
   margin: 0 auto;
   padding: 20px 0;
@@ -327,6 +324,5 @@ a {
   justify-content: center;
   width: 100%;
 }
-
 
 
